--- a/views/examples/example6.jade
+++ b/views/examples/example6.jade
@@ -1,48 +1,84 @@
 extends ../layout
 block scripts
-    script(src="/javascripts/nodeleak.js")
+    script(src="/javascripts/closures.js")
 block content
-    h1 #{title}: Leaking DOM nodes
-    p If the compiler can use hidden classes, your code will execute MUCH faster and will use MUCH LESS memory.
+    h1 #{title}: Eval is evil (almost always)
+    p Let's analyze the impact of closures on memory
+    p You can see that 'eval' retains a reference on all the variables of the closure.
     ol
-        li Open Timeline tab.
-        li Start recording activty.
-        li Repeat the next steps and watch the Timeline
-            ol
-                li Create some nodes
-                li GC
-    p
-        button(onclick="createNodes()") Create nodes (some of them leaked)
+        li Start the creation of new closures
+        li Take a heap snapshot
+        li Find the closures (named lC, sC and eC)
+    p: button(onclick="largeClosures()") Closures mantain hold on large string
+    p: button(onclick="smallClosures()") Closures mantain hold only on small strings
+    p: button(onclick="evalClosures()") Closures with eval
+    p: button(onclick="stopAndClear()") Stop and clear
 
     hr
     pre.
         'use strict';
 
-        var leakedNodes = [];
+        var intervalId,
+            closures = [];
 
-        function createNode(text) {
-            var div = document.createElement("div"),
-                innerDiv = document.createElement("div");
-            innerDiv.appendChild(document.createTextNode(text + " - "+ new Date().toTimeString()));
-            div.appendChild(innerDiv);
-            return div;
+        function createLargeClosure() {
+            var largeStr = new Array(1000000).join('x');
+            return function lC() {
+                return largeStr;
+            };
         }
 
-        function createLeakedNodes() {
-            var i;
-            for (i = 0; i < 20; i++) {
-                leakedNodes.push(createNode("Leaked:" + i));
+        function createSmallClosure() {
+            var smallStr = 'x';
+            var largeStr = new Array(1000000).join('x');
+            return function sC() {
+                return smallStr;
+            };
+        }
+
+        function createEvalClosure() {
+            var smallStr = 'x';
+            var largeStr = new Array(1000000).join('x');
+            return function eC() {
+                eval('');
+                return smallStr;
+            };
+        }
+
+        function largeClosures() {
+            stopInterval();
+            intervalId = setInterval(function () {
+                closures.push(createLargeClosure());
+            }, 1000);
+        }
+
+        function smallClosures() {
+            stopInterval();
+                intervalId = setInterval(function () {
+                closures.push(createSmallClosure());
+            }, 1000);
+
+        }
+
+        function evalClosures() {
+            stopInterval();
+            intervalId = setInterval(function () {
+                closures.push(createEvalClosure());
+            }, 1000);
+        }
+
+        function stopInterval() {
+            if (intervalId) {
+                clearInterval(intervalId);
             }
+            intervalId = null;
         }
 
-        function createGCNodes() {
-            var i;
-            for (i = 0; i < 20; i++) {
-                createNode("Collected:" + i);
-            }
+        function clear() {
+            closures.length = 0;
         }
 
-        function createNodes() {
-            createLeakedNodes();
-            createGCNodes();
+        function stopAndClear(){
+            stopInterval();
+            clear();
         }
