--- a/views/examples/example8.jade
+++ b/views/examples/example8.jade
@@ -1,84 +1,42 @@
 extends ../layout
 block scripts
-    script(src="/javascripts/closures.js")
+    script(src="/javascripts/bind.js")
 block content
-    h1 #{title}: Recording heap allocations
-    p Let's analyze the impact of closures on memory
-    p You can see that 'eval' retains a reference on all the variables of the closure.
+    h1 #{title}: BIND memory leak
+    p Let's analyze the memory
     ol
         li Start to record heap allocations
-        li Start the creation of new closures
         li Analyze what is happening
-    p: button(onclick="largeClosures()") Closures mantain hold on large string
-    p: button(onclick="smallClosures()") Closures mantain hold only on small strings
-    p: button(onclick="evalClosures()") Closures with eval
-    p: button(onclick="stopAndClear()") Stop and clear
+    p
+        button(onclick="bindExample()") Bind
+    p
+        button(onclick="clearA()") clear A
+    p
+        button(onclick="clearB()") clear B
 
     hr
     pre.
         'use strict';
+        var ClassA = function(name){
+                this.name = name;
+                this.func = null;
+        };
 
-        var intervalId,
-            closures = [];
+        var a = new ClassA("a");
+        var b = new ClassA("b");
 
-        function createLargeClosure() {
-            var largeStr = new Array(1000000).join('x');
-            return function lC() {
-                return largeStr;
-            };
-        }
+        b.func = bind(function(){
+                console.log("I am " + this.name);
+        }, a);
 
-        function createSmallClosure() {
-            var smallStr = 'x';
-            var largeStr = new Array(1000000).join('x');
-            return function sC() {
-                return smallStr;
-            };
-        }
+        b.func();  //输出 I am a
 
-        function createEvalClosure() {
-            var smallStr = 'x';
-            var largeStr = new Array(1000000).join('x');
-            return function eC() {
-                eval('');
-                return smallStr;
-            };
-        }
+        a = null;        //释放a
+        //b = null;        //释放b
 
-        function largeClosures() {
-            stopInterval();
-            intervalId = setInterval(function () {
-                closures.push(createLargeClosure());
-            }, 1000);
-        }
 
-        function smallClosures() {
-            stopInterval();
-                intervalId = setInterval(function () {
-                closures.push(createSmallClosure());
-            }, 1000);
-
-        }
-
-        function evalClosures() {
-            stopInterval();
-            intervalId = setInterval(function () {
-                closures.push(createEvalClosure());
-            }, 1000);
-        }
-
-        function stopInterval() {
-            if (intervalId) {
-                clearInterval(intervalId);
-            }
-            intervalId = null;
-        }
-
-        function clear() {
-            closures.length = 0;
-        }
-
-        function stopAndClear(){
-            stopInterval();
-            clear();
-        }
+        function bind(func, self){
+                return function(){
+                        return func.apply(self);
+                };
+        };
