--- a/views/index.jade
+++ b/views/index.jade
@@ -4,17 +4,11 @@ block back
 block content
     h1= title
     ul
-        li: a(target="_blank", href="/example/1") Example 1: Growing memory
+        li: a(target="_blank", href="/example/1") Example 1: Memory Growing
         li: a(target="_blank", href="/example/2") Example 2: Garbage collection in action
         li: a(target="_blank", href="/example/3") Example 3: Scattered objects
         li: a(target="_blank", href="/example/4") Example 4: Detached nodes
         li: a(target="_blank", href="/example/5") Example 5: Memory and hidden classes
-        li: a(target="_blank", href="/example/6") Example 6: Leaking DOM nodes
-        li: a(target="_blank", href="/example/7") Example 7: Eval is evil (almost always)
-        li: a(target="_blank", href="/example/8") Example 8: Recording heap allocations
-        li: a(target="_blank", href="/example/9") Example 9: DOM leaks bigger than expected
-        li: a(target="_blank", href="/example/10") Example 10: Retaining path
-        li: a(target="_blank", href="/example/11") Example 11: Last exercise
-    h1 Explanations & graphs
-    ul
-        li: a(target="_blank", href="/docs/1") Doc 1: Dominator and dominated nodes
+        li: a(target="_blank", href="/example/6") Example 6: Eval is evil (almost always)
+        li: a(target="_blank", href="/example/7") Example 7: DOM leaks bigger than expected
+        li: a(target="_blank", href="/example/8") Example 8: BIND memory leak
